--- a/_layouts/covid-analysis.html
+++ b/_layouts/covid-analysis.html
@@ -24,8 +24,8 @@
     <meta property="og:description" content="{{ page.description | escape }}">
     <meta name="twitter:description" content="{{ page.description | escape }}">
 
-    <meta property="og:url" content="{{ page.url | absolute_url }}">
-    <link rel=”canonical” href="{{ page.url | absolute_url }}">
+    <meta property="og:url" content="{{ page.url }}">
+    <link rel=”canonical” href="{{ page.url }}">
     
     <link rel="icon" type="image/png" href="/static/waf.png">
 
